--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
     "history": "^2.0.1",
+    "jquery": "^3.1.0",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-router": "^2.6.1"
