--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "history": "^2.0.1",
     "jquery": "^3.1.0",
     "react": "^15.3.0",
+    "react-bootstrap": "^0.30.2",
     "react-dom": "^15.3.0",
-    "react-router": "^2.6.1"
+    "react-router": "^2.6.1",
+    "react-router-bootstrap": "^0.23.1",
+    "reflux": "^0.4.1",
+    "reflux-promise": "^1.0.4"
   }
 }
